# SmallString

./: .gitignore  CMakeLists.txt  README.md  configure.sh
include/: BasicSSO.h
src/: main.cc
tests/: CMakeLists.txt
tests/src/: TestSSO.cc
